Adjust whitespace in newtab mod for Windows and Linux. Fixes #138.

--- a/addon/skin/tracking-protection-study.css
+++ b/addon/skin/tracking-protection-study.css
@@ -39,6 +39,11 @@
   line-height: 1.25;
 }
 
+#tracking-protection-messaging-study-container.windows-or-linux-os {
+  margin-top: 20px;
+  padding: 0 25px;
+}
+
 #tracking-protection-messaging-study-message::before {
   content: "";
   display: inline-block;
